hphp/test/slow/reified_generics/abstract-class-2.php.expectf
done

Catchable fatal error: Argument 1 passed to A::f() must be an instance of int, bool given in %s on line 15
